fix too large author logo.

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -170,6 +170,13 @@ footer {
         }
       }
     }
+
+    .author_logo {
+      img {
+        max-width: 100px;
+        max-height: 100px;
+      }
+    }
   }
 
   div#ending_message {
